--- a/WebContent/app/views/layout/page-footer.html
+++ b/WebContent/app/views/layout/page-footer.html
@@ -1,11 +1,10 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container">
 		<p class="navbar-text navbar-left">
-			<small><strong>Version {{sysVersion}}</strong></small>
+			<small><strong>{{sysName}} - Version {{sysVersion}}</strong></small>
 		</p>
 		<p class="navbar-text navbar-right">
-			<small>Desarrollado por <strong>Fabricio Scianda</strong> - <a
-				href="mailto:fabricio.scianda@gmail.com">fabricio.scianda@gmail.com</a></small>
+			<small>Desarrollado por <strong><a href="mailto:{{contactMail}}">{{contactName}}</a></strong></small>
 		</p>
 	</div>
 </nav>
