--- a/WebContent/app/views/partials/docente/partialDocenteDomicilios.html
+++ b/WebContent/app/views/partials/docente/partialDocenteDomicilios.html
@@ -6,10 +6,10 @@
 		<table class="table table-hover table-condensed table-striped">
 			<thead>
 				<tr>
-					<td class="text-center">Actual</td>
-					<td>Domicilio</td>
-					<td>Localidad</td>
-					<td></td>
+					<th class="text-center">Actual</th>
+					<th>Domicilio</th>
+					<th>Localidad</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
