--- a/WebContent/app/views/partials/docente/partialDocenteEmpleos.html
+++ b/WebContent/app/views/partials/docente/partialDocenteEmpleos.html
@@ -6,12 +6,12 @@
 		<table class="table table-hover table-condensed table-striped">
 			<thead>
 				<tr>
-					<td>Razon Social</td>
-					<td>Cargo</td>
-					<td>Detalle del Cargo</td>
-					<td>Administracion</td>
-					<td>Relacion</td>
-					<td></td>
+					<th>Razon Social</th>
+					<th>Cargo</th>
+					<th>Detalle del Cargo</th>
+					<th>Administracion</th>
+					<th>Relacion</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
