--- a/WebContent/app/views/partials/docente/partialDocenteFormAcademica.html
+++ b/WebContent/app/views/partials/docente/partialDocenteFormAcademica.html
@@ -6,12 +6,12 @@
 		<table class="table table-hover table-condensed table-striped">
 			<thead>
 				<tr>
-					<td>Tipo</td>
-					<td>Titulo</td>
-					<td>Estado</td>
-					<td>Expedido por</td>
-					<td>Año expedido</td>
-					<td></td>
+					<th>Tipo</th>
+					<th>Titulo</th>
+					<th>Estado</th>
+					<th>Expedido por</th>
+					<th>Año expedido</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
