--- a/WebContent/app/views/partials/docente/partialDocenteMediosContacto.html
+++ b/WebContent/app/views/partials/docente/partialDocenteMediosContacto.html
@@ -6,9 +6,9 @@
 		<table class="table table-hover table-condensed table-striped">
 			<thead>
 				<tr>
-					<td>Medio</td>
-					<td>Contacto</td>
-					<td></td>
+					<th>Medio</th>
+					<th>Contacto</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
