--- a/WebContent/app/views/asignaturas.html
+++ b/WebContent/app/views/asignaturas.html
@@ -56,20 +56,20 @@
 			</div>
 			<!-- Listado -->
 			<div class="panel-body" ng-init="listar()">
-				<table class="table table-hover table-condensed table-striped" ng-show="asignaturas.length!=0">
+				<table class="table table-condensed " ng-show="asignaturas.length!=0">
 					<thead>
 						<tr>
-							<td><em>Año</em></td>
-							<td><em>Asignatura</em></td>
-							<td><em>Carrera</em></td>
-							<td></td>
-							<td></td>
+							<th><em>Año</em></th>
+							<th><em>Asignatura</em></th>
+							<th><em>Carrera</em></th>
+							<th></th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="asignatura in asignaturas | orderBy:['carrera.nombre', 'nombre']">
-							<td><strong>{{asignatura.anio}} °</strong></td>
-							<td><strong>{{asignatura.nombre}}</strong></td>
+						<tr ng-repeat="asignatura in asignaturas | orderBy:['carrera.nombre', 'nombre']" ng-class="{'bg-success':(asignatura.anio==1), 'bg-warning':(asignatura.anio==2), 'bg-danger':(asignatura.anio==3)}">
+							<td>{{asignatura.anio}} °</td>
+							<td>{{asignatura.nombre}}</td>
 							<td>{{asignatura.carrera.nombre + ', ' + asignatura.carrera.sede.instituto.nombre + ', ' + asignatura.carrera.sede.nombre + ', ' + asignatura.carrera.sede.localidad.nombre + ', ' + asignatura.carrera.sede.localidad.partido.nombre}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(asignatura)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(asignatura)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
@@ -79,7 +79,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de asignaturas: <strong>{{asignaturas.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de asignaturas: {{asignaturas.length}}.</h5>
 			</div>
 		</div>
 	</div>
