--- a/WebContent/app/views/carreras.html
+++ b/WebContent/app/views/carreras.html
@@ -58,17 +58,17 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="carreras.length!=0">
 					<thead>
 						<tr>
-							<td><em>Carrera</em></td>
-							<td><em>Sede, Instituto, Localidad, Partido, Provincia</em></td>
-							<td>Duración</td>
-							<td></td>
-							<td></td>
+							<th>Carrera</th>
+							<th>Sede, Instituto, Localidad, Partido, Provincia</th>
+							<th>Duración</th>
+							<th></th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="carrera in carreras | orderBy:['sede.nombre', 'nombre']">
-							<td><strong>{{carrera.nombre}}</strong></td>
-							<td><strong>{{carrera.sede.nombre}}, {{carrera.sede.instituto.nombre}}, {{carrera.sede.localidad.nombre}}</strong>, {{carrera.sede.localidad.partido.nombre}}, {{carrera.sede.localidad.partido.provincia.nombre}}</td>
+							<td>{{carrera.nombre}}</td>
+							<td>{{carrera.sede.nombre}}, {{carrera.sede.instituto.nombre}}, {{carrera.sede.localidad.nombre}}, {{carrera.sede.localidad.partido.nombre}}, {{carrera.sede.localidad.partido.provincia.nombre}}</td>
 							<td>{{carrera.cantAnios}} {{(carrera.cantAnios==1)?'año':'años'}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(carrera)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(carrera)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
@@ -78,7 +78,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de carreras: <strong>{{carreras.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de carreras: {{carreras.length}}.</h5>
 			</div>
 		</div>
 	</div>
