--- a/WebContent/app/views/desempenios.html
+++ b/WebContent/app/views/desempenios.html
@@ -38,7 +38,9 @@
 						</div>
 						<div class="form-group form-inline col-sm-4">
 				            <p class="input-group">
-				              <input placeholder="Año" type="text" class="form-control" datepicker-popup="{{formatYearOnly}}" ng-model="anioSel" is-open="openedAnio" max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" disabled/>
+				              <input placeholder="Año" type="text" class="form-control" datepicker-popup="{{formatYearOnly}}" ng-model="anioSel" is-open="openedAnio" 
+				              		max-date="maxDate" datepicker-options="dateOptions" ng-required="true" clear-text="Borrar" current-text="Hoy" close-text="Cerrar" 
+				              		disabled/>
 				              <span class="input-group-btn">
 				                <button type="button" class="btn btn-default" ng-click="openAnio($event)"><i class="glyphicon glyphicon-calendar"></i></button>
 				              </span>
@@ -46,7 +48,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="form-group col-sm-5">
+						<div class="form-group col-sm-6">
 							<div class="input-group">
 						      	<input type="number" class="form-control" id="hcs" placeholder="HCS" ng-model="hcs" max="22" min="0">
 						      	<div class="input-group-addon">HCS Mensuales</div>
@@ -63,7 +65,7 @@
 			</div>
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer" ng-show="!colapsarFormulario">
-				<button type="submit" class="btn btn-primary" ng-click="guardar(desempenio)">Guardar</button>
+				<button type="submit" class="btn btn-primary" ng-click="guardar(desempenio.id_desempenio)">Guardar</button>
 				<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
 				<button type="submit" class="btn btn-default pull-right" ng-click="cerrarForm()">Cerrar</button>
 			</div>
@@ -82,24 +84,24 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="desempenios.length!=0">
 					<thead>
 						<tr>
-							<td><em>Docente</em></td>
-							<td><em>Asignatura</em></td>
-							<td><em>Año</em></td>
-							<td><em>Mes</em></td>
-							<td><em>HCS</em></td>
-							<td><em>Inasistencias</em></td>
-							<td></td>
-							<td></td>
+							<th>Docente</th>
+							<th>Asignatura</th>
+							<th>Año</th>
+							<th>Mes</th>
+							<th>HCS</th>
+							<th>Inasistencias</th>
+							<th></th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="desempenio in desempenios | orderBy:['desempenio.docente.nombre', 'desempenio.asignatura.nombre']" class="text-capitalize">
-							<td><strong>{{desempenio.docente.persona.apellido + ', ' + desempenio.docente.persona.nombre}}</strong></td>
-							<td><strong>{{desempenio.asignatura.nombre + ', ' + desempenio.asignatura.anio + '°'}}</strong></td>
-							<td><strong>{{desempenio.anio}}</strong></td>
-							<td><strong>{{meses[indiceDe(meses, desempenio.mes, 'value')].nombre}}</strong></td>
-							<td><strong>{{desempenio.hcs}}</strong></td>
-							<td><strong>{{desempenio.faltas}}</strong></td>
+							<td>{{desempenio.docente.persona.apellido + ', ' + desempenio.docente.persona.nombre}}</td>
+							<td>{{desempenio.asignatura.nombre + ', ' + desempenio.asignatura.anio + '°'}}</td>
+							<td>{{desempenio.anio}}</td>
+							<td>{{meses[indiceDe(meses, desempenio.mes, 'value')].nombre}}</td>
+							<td>{{desempenio.hcs}}</td>
+							<td>{{desempenio.faltas}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(desempenio)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(desempenio)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
@@ -108,7 +110,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de registros: <strong>{{desempenios.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de registros: {{desempenios.length}}.</h5>
 			</div>
 		</div>
 	</div>
