--- a/WebContent/app/views/docentes.html
+++ b/WebContent/app/views/docentes.html
@@ -45,47 +45,6 @@
 	</div>
 	
 	<!-- Listado Actuales -->
-	<div class="row col-sm-11">
-		<!-- Panel -->
-		<div class="panel panel-primary">
-			<!-- Panel Header -->
-			<div class="panel-heading">
-				<h4 class="panel-title">{{modulo}} Actuales</h4>
-			</div>
-			<!-- Listado -->
-			<div class="panel-body" ng-init="listar()">
-				<table class="table table-hover table-condensed table-striped" ng-show="docentes.length!=0">
-					<thead>
-						<tr>
-							<td>Nombre</td>
-							<td>Apellido</td>
-							<td>Tipo Doc.</td>
-							<td>Numero</td>
-							<td>Fecha Nac.</td>
-							<td>CUIL</td>
-							<td></td>
-							<td></td>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="docente in docentes | orderBy:['persona.apellido', 'persona.nombre']">
-							<td class="text-capitalize"><strong>{{docente.persona.apellido}}</strong></td>
-							<td class="text-capitalize"><strong>{{docente.persona.nombre}}</strong></td>
-							<td><strong>{{docente.persona.tipoDoc.nombre}}</strong></td>
-							<td><strong>{{docente.persona.numeroDoc}}</strong></td>
-							<td><strong>{{docente.persona.fechaNac | date:'dd-MM-yyyy'}}</strong></td>
-							<td><strong>{{docente.persona.cuil | cuil}}</strong></td>
-							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(docente)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(docente)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-			<!-- Panel Footer -->
-			<div class="panel-footer">
-				<h5 class="panel-title">Total de personas: <strong>{{docentes.length}}</strong>.</h5>
-			</div>
-		</div>
-	</div>
+	<docente-listado-actuales></docente-listado-actuales>
 
 </div>
