--- a/WebContent/app/views/formTipos.html
+++ b/WebContent/app/views/formTipos.html
@@ -46,7 +46,7 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="tipos.length!=0">
 					<tbody>
 						<tr ng-repeat="tipo in tipos | orderBy: 'nombre'">
-							<td><strong>{{tipo.nombre}}</strong></td>
+							<td>{{tipo.nombre}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(tipo)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(tipo)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
@@ -55,7 +55,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de items: <strong>{{tipos.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de items: {{tipos.length}}.</h5>
 			</div>
 		</div>
 	</div>
