--- a/WebContent/app/views/institutos.html
+++ b/WebContent/app/views/institutos.html
@@ -46,7 +46,7 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="institutos.length!=0">
 					<tbody>
 						<tr ng-repeat="instituto in institutos | orderBy: 'nombre'">
-							<td><strong>{{instituto.nombre}}</strong></td>
+							<td>{{instituto.nombre}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(instituto)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(instituto)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
@@ -55,7 +55,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de institutos: <strong>{{institutos.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de institutos: {{institutos.length}}.</h5>
 			</div>
 		</div>
 	</div>
