--- a/WebContent/app/views/layout/home.html
+++ b/WebContent/app/views/layout/home.html
@@ -1,6 +1,6 @@
 <div class="row col-sm-10 col-sm-offset-1" ng-show="logueado">
 	<div class="jumbotron">
-		<h1 class="text-center">Formación</h1>
-		<h3 class="text-center">Ministerio de Seguridad</h3>
+		<h1 class="text-center">{{sysName}}</h1>
+		<h3 class="text-center">Formación - Ministerio de Seguridad</h3>
 	</div>
 </div>
