--- a/WebContent/app/views/layout/modal-confirm.html
+++ b/WebContent/app/views/layout/modal-confirm.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="confirm-modal" aria-hidden="true" ng-show="logueado">
-	<div class="modal-dialog modal-sm">
+	<div class="modal-dialog modal-md">
 		<div class="modal-content">
 			<div class="modal-header alert alert-danger" role="alert">
 				<h4 class="modal-title">
