--- a/WebContent/app/views/layout/modal-logout.html
+++ b/WebContent/app/views/layout/modal-logout.html
@@ -1,5 +1,5 @@
 <div class="modal fade" id="modal-logout" tabindex="-1" role="dialog" aria-labelledby="modal-logout" aria-hidden="true" ng-show="logueado" ng-controller="LoginCtrl">
-	<div class="modal-dialog modal-sm">
+	<div class="modal-dialog modal-md">
 		<div class="modal-content">
 			<div class="modal-header alert alert-info" role="alert">
 				<h4 class="modal-title">
@@ -9,8 +9,8 @@
 			<div class="modal-body">
 				<form role="form" name="confirmarLogout">
 					<div class="form-group">
-						<h4 class="text-center text-capitalize">
-							¿Desea cerrar sesion?
+						<h4 class="text-center">
+							¿Desea cerrar sesión, <span class="text-capitalize">{{loginName}}</span>?
 						</h4>
 					</div>
 				</form>
@@ -18,7 +18,7 @@
 			<div class="modal-footer">
 				<div class="form-group">
 					<button type="submit" class="btn btn-default pull-left" data-dismiss="modal">Cancelar</button>
-					<button type="submit" class="btn btn-success pull-right" ng-click="logout()">Salir</button>
+					<button type="submit" class="btn btn-success pull-right" ng-click="logout()">Cerrar Sesión</button>
 				</div>
 			</div>
 		</div>
