--- a/WebContent/app/views/localidades.html
+++ b/WebContent/app/views/localidades.html
@@ -54,16 +54,16 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="localidades.length!=0">
 					<thead>
 						<tr>
-							<td><em>Localidad</em></td>
-							<td><em>Partido</em></td>
-							<td><em>CP</em></td>
-							<td></td>
-							<td></td>
+							<th>Localidad</th>
+							<th>Partido</th>
+							<th>CP</th>
+							<th></th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="localidad in localidades | orderBy:['partido.nombre', 'nombre']">
-							<td><strong>{{localidad.nombre}}</strong></td>
+							<td>{{localidad.nombre}}</td>
 							<td>{{localidad.partido.nombre}}</td>
 							<td>{{localidad.cp}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(localidad)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
@@ -74,7 +74,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de localidades: <strong>{{localidades.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de localidades: {{localidades.length}}.</h5>
 			</div>
 		</div>
 	</div>
