--- a/WebContent/app/views/partidos.html
+++ b/WebContent/app/views/partidos.html
@@ -51,15 +51,15 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="partidos.length!=0">
 					<thead>
 						<tr>
-							<td><em>Partido</em></td>
-							<td><em>Provincia</em></td>
-							<td></td>
-							<td></td>
+							<th><em>Partido</em></th>
+							<th><em>Provincia</em></th>
+							<th></th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="partido in partidos | orderBy:['provincia.nombre', 'nombre']">
-							<td><strong>{{partido.nombre}}</strong></td>
+							<td>{{partido.nombre}}</td>
 							<td>{{partido.provincia.nombre}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(partido)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(partido)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
@@ -69,7 +69,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de partidos: <strong>{{partidos.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de partidos: {{partidos.length}}.</h5>
 			</div>
 		</div>
 	</div>
