--- a/WebContent/app/views/planesEstudio.html
+++ b/WebContent/app/views/planesEstudio.html
@@ -54,15 +54,15 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="planesEstudio.length!=0">
 					<thead>
 						<tr>
-							<td><em>Plan</em></td>
-							<td>Año</td>
-							<td></td>
-							<td></td>
+							<th>Plan</th>
+							<th>Año</th>
+							<th></th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="plan in planesEstudio | orderBy:['nombre', 'anio']">
-							<td class="text-capitalize"><strong>{{plan.nombre}}</strong></td>
+							<td class="text-capitalize">{{plan.nombre}}</td>
 							<td>{{plan.anio}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(plan)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(plan)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
@@ -72,7 +72,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de planes: <strong>{{planesEstudio.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de planes: {{planesEstudio.length}}.</h5>
 			</div>
 		</div>
 	</div>
