--- a/WebContent/app/views/provincias.html
+++ b/WebContent/app/views/provincias.html
@@ -33,6 +33,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<!-- Listado Actuales -->
 	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
@@ -46,7 +47,7 @@
 				<table class="table table-hover table-condensed table-striped" ng-show="provincias.length!=0">
 					<tbody>
 						<tr ng-repeat="provincia in provincias | orderBy: 'nombre'">
-							<td><strong>{{provincia.nombre}}</strong></td>
+							<td>{{provincia.nombre}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(provincia)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(provincia)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
@@ -55,7 +56,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de provincias: <strong>{{provincias.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de provincias: {{provincias.length}}.</h5>
 			</div>
 		</div>
 	</div>
