--- a/WebContent/app/views/usuarios.html
+++ b/WebContent/app/views/usuarios.html
@@ -1,4 +1,4 @@
-<div class="row" ng-show="logueado">
+<div class="row" ng-show="logueado" ng-if="esAdmin">
 	<!-- Page Header -->
 	<page-header></page-header>
 	<!-- Alert Modal -->
@@ -62,7 +62,7 @@
 						<tr>
 							<th>Apellido</th>
 							<th>Nombre</th>
-							<th>Nombre Usuario</th>
+							<th>Usuario</th>
 							<th>Administrador</th>
 							<th></th>
 							<th></th>
@@ -70,9 +70,9 @@
 					</thead>
 					<tbody>
 						<tr ng-repeat="usr in usuarios | orderBy: ['apellido','nombre']">
-							<td class="text-capitalize"><strong>{{usr.apellido}}</strong></td>
-							<td class="text-capitalize"><strong>{{usr.nombre}}</strong></td>
-							<td><strong>{{usr.username}}</strong></td>
+							<td class="text-capitalize">{{usr.apellido}}</td>
+							<td class="text-capitalize">{{usr.nombre}}</td>
+							<td>{{usr.username}}</td>
 							<td class="text-center"><span class="glyphicon glyphicon-ok-circle" aria-hidden="true" ng-show="usr.esAdmin"></span></td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(usr)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(usr)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
@@ -82,7 +82,7 @@
 			</div>
 			<!-- Panel Footer -->
 			<div class="panel-footer">
-				<h5 class="panel-title">Total de items: <strong>{{usuarios.length}}</strong>.</h5>
+				<h5 class="panel-title">Total de items: {{usuarios.length}}.</h5>
 			</div>
 		</div>
 	</div>
