--- a/WebContent/app/views/provincias.html
+++ b/WebContent/app/views/provincias.html
@@ -6,7 +6,7 @@
 	<!-- Confirmacion Borrar -->
 	<modal-confirm></modal-confirm>
 	<!-- Form Nuevo -->
-	<div class="row col-sm-3 col-sm-offset-1">
+	<div class="row col-sm-4 col-sm-offset-1">
 		<!-- Panel -->
 		<div class="panel panel-primary">
 			<!-- Panel Header -->
@@ -19,11 +19,14 @@
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body" collapse="colapsarFormulario">
-				<form role="form" name="formAction">
-					<div class="form-group">
+				<dl class="dl-horizontal">
+					<dt>
+						<label for="nombre">Nombre</label>
+					</dt>
+					<dd>
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nuevo.nombre" placeholder="Nombre de la Provincia">
-					</div>
-				</form>
+					</dd>
+				</dl>
 			</div>
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer" ng-show="!colapsarFormulario">
