--- a/WebContent/app/views/asignaturas.html
+++ b/WebContent/app/views/asignaturas.html
@@ -12,31 +12,37 @@
 			<!-- Panel Header -->
 			<div class="panel-heading">
 				<h4 class="panel-title">
-					<a href="" ng-click="colapsarFormulario=!colapsarFormulario">Nuevo {{nombreForm}}
+					<a href="" ng-click="colapsarFormulario=!colapsarFormulario">Nueva {{nombreForm}}
 						<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': colapsarFormulario, 'glyphicon-chevron-up': !colapsarFormulario}"></i>
 					</a>
 				</h4>
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body" collapse="colapsarFormulario">
-				<form role="form" name="formAction" ng-init="listarCarreras()">
-					<div class="form-group" ng-class="{'has-error':carreraSel==null, 'has-success':carreraSel!=null}">
-						<select class="form-control" ng-options="(carrera.nombre + ', ' + carrera.sede.instituto.nombre + ', ' + carrera.sede.nombre + ', ' + carrera.sede.localidad.nombre + ', ' + carrera.sede.localidad.partido.nombre ) for carrera in carreras" required ng-model="carreraSel" ng-click="initAnios(carreraSel.cantAnios)">
-							<option value="">-- Carrera, Instituto, Sede, Localidad, Partido --</option>
-						</select>
-					</div>
-					<div class="form-group" ng-class="{'has-error':(nueva.nombre==undefined || nueva.nombre.lenght==0), 'has-success':(nueva.nombre!=undefined && nueva.nombre.lenght!=0)}">
+				<dl class="dl-horizontal">
+					<dt>
+						<label>Nombre</label>
+					</dt>
+					<dd>
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nueva.nombre" placeholder="Nombre de la Asignatura">
-					</div>
-					<div class="form-group" ng-show="(carreraSel.cantAnios!=undefined && carreraSel.cantAnios>0)">
+					</dd>
+					<dt>
 						<label for="anio" class="control-label">Año en que se cursa</label>
-						<div>
-							<label class="radio-inline" ng-repeat="anio in anios"> 
-								<input type="radio" id="anioSel" name="anioSel" value="{{anio}}" ng-model="$parent.anioSel"> {{anio}} año 
-							</label>
-						</div>
-					</div>
-				</form>
+					</dt>
+					<dd>
+						<label class="radio-inline" ng-repeat="anio in anios"> 
+							<input type="radio" id="anioSel" name="anioSel" value="{{anio.value}}" ng-model="$parent.anioSel"> {{anio.value}} año 
+						</label>
+					</dd>
+					<dd>
+						<label>
+							<input type="checkbox" ng-model="nueva.extra"> Extracurricular
+						</label>
+					</dd>
+				</dl>
+<!-- 					<div class="form-group" ng-class="{'has-error':(nueva.nombre==undefined || nueva.nombre.lenght==0), 'has-success':(nueva.nombre!=undefined && nueva.nombre.lenght!=0)}"> -->
+<!-- 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nueva.nombre" placeholder="Nombre de la Asignatura"> -->
+<!-- 					</div> -->
 			</div>
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer" ng-show="!colapsarFormulario">
@@ -59,18 +65,18 @@
 				<table class="table table-condensed " ng-show="asignaturas.length!=0">
 					<thead>
 						<tr>
-							<th><em>Año</em></th>
-							<th><em>Asignatura</em></th>
-							<th><em>Carrera</em></th>
+							<th>Año</th>
+							<th>Asignatura</th>
+							<th class="text-center">Extracurricular</th>
 							<th></th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="asignatura in asignaturas | orderBy:['carrera.nombre', 'nombre']" ng-class="{'bg-success':(asignatura.anio==1), 'bg-warning':(asignatura.anio==2), 'bg-danger':(asignatura.anio==3)}">
+						<tr ng-repeat="asignatura in asignaturas | orderBy:['anio','nombre']" ng-class="{'bg-success':(asignatura.anio==1), 'bg-warning':(asignatura.anio==2), 'bg-danger':(asignatura.anio==3)}">
 							<td>{{asignatura.anio}} °</td>
 							<td>{{asignatura.nombre}}</td>
-							<td>{{asignatura.carrera.nombre + ', ' + asignatura.carrera.sede.instituto.nombre + ', ' + asignatura.carrera.sede.nombre + ', ' + asignatura.carrera.sede.localidad.nombre + ', ' + asignatura.carrera.sede.localidad.partido.nombre}}</td>
+							<td class="text-center"><span ng-class="{'glyphicon glyphicon-check':asignatura.extra}"></span></td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(asignatura)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(asignatura)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
 						</tr>
