--- a/WebContent/app/views/carreras.html
+++ b/WebContent/app/views/carreras.html
@@ -19,23 +19,21 @@
 			</div>
 			<!-- Panel Body -->
 			<div class="panel-body" collapse="colapsarFormulario">
-				<form role="form" name="formAction" ng-init="listarSedes()">
-					<div class="form-group">
-						<select class="form-control" ng-options="( sede.nombre + ' , ' + sede.instituto.nombre + ' , ' + sede.localidad.nombre + ' , ' + sede.localidad.partido.nombre + ' , ' + sede.localidad.partido.provincia.nombre ) for sede in sedes" required ng-model="sedeSel">
-							<option value="">-- Sede, Instituto, Localidad, Partido, Provincia --</option>
-						</select>
-					</div>
-					<div class="form-group">
+				<dl class="dl-horizontal">
+					<dt>
+						<label>Nombre</label>
+					</dt>
+					<dd>
 						<input type="text" class="form-control" id="nombre" name="nombre" ng-model="nueva.nombre" placeholder="Nombre de la carrera">
-					</div>
-					<div class="form-group">
-						<label for="cantAnios" class="control-label">Duracion</label>
-						<div>
-							<label class="radio-inline" ng-repeat="anio in anios"> 
-							<input type="radio" id="anioSel" name="anioSel" value="{{anio.value}}" ng-model="$parent.anioSel"> {{anio.value}} {{(anio.value==1)?'año':'años'}} </label>
-						</div>
-					</div>
-				</form>
+					</dd>
+					<dt>
+						<label for="cantAnios" class="control-label">Duración</label>
+					</dt>
+					<dd>
+						<label class="radio-inline" ng-repeat="anio in anios"> 
+						<input type="radio" id="anioSel" name="anioSel" value="{{anio.value}}" ng-model="$parent.anioSel"> {{anio.value}} {{(anio.value==1)?'año':'años'}} </label>
+					</dd>
+				</dl>
 			</div>
 			<!-- Panel Footer : Buttons -->
 			<div class="panel-footer" ng-show="!colapsarFormulario">
@@ -59,16 +57,16 @@
 					<thead>
 						<tr>
 							<th>Carrera</th>
-							<th>Sede, Instituto, Localidad, Partido, Provincia</th>
+<!-- 							<th>Sede, Instituto, Localidad, Partido, Provincia</th> -->
 							<th>Duración</th>
 							<th></th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="carrera in carreras | orderBy:['sede.nombre', 'nombre']">
+						<tr ng-repeat="carrera in carreras | orderBy:['nombre']">
 							<td>{{carrera.nombre}}</td>
-							<td>{{carrera.sede.nombre}}, {{carrera.sede.instituto.nombre}}, {{carrera.sede.localidad.nombre}}, {{carrera.sede.localidad.partido.nombre}}, {{carrera.sede.localidad.partido.provincia.nombre}}</td>
+<!-- 							<td>{{carrera.sede.nombre}}, {{carrera.sede.instituto.nombre}}, {{carrera.sede.localidad.nombre}}, {{carrera.sede.localidad.partido.nombre}}, {{carrera.sede.localidad.partido.provincia.nombre}}</td> -->
 							<td>{{carrera.cantAnios}} {{(carrera.cantAnios==1)?'año':'años'}}</td>
 							<td><a href="#/{{urlModulo}}" ng-click="editarElemento(carrera)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a href="#/{{urlModulo}}" ng-click="confirmarBorrar(carrera)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
